// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`case not found rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/search"
          onClick={[Function]}
        >
          Search cases
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          All services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn mn--full mn--nv-s"
    role="main"
  />
</div>
`;

exports[`case rendering 1`] = `
<div>
  <nav
    className="nv-s nv-s--y nv-s--sticky"
  >
    <input
      aria-hidden={true}
      className="nv-s-tr"
      id="nv-s-tr"
      type="checkbox"
    />
    <ul
      className="nv-s-l"
    >
      <li
        className="nv-s-l-i"
      >
        <label
          className="nv-s-l-b"
          htmlFor="nv-s-tr"
          type="button"
        >
          Navigation
        </label>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/"
          onClick={[Function]}
        >
          Report a problem
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/search"
          onClick={[Function]}
        >
          Search cases
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/services"
          onClick={[Function]}
        >
          All services
        </a>
      </li>
      <li
        className="nv-s-l-i"
      >
        <a
          className="nv-s-l-a "
          href="/faq"
          onClick={[Function]}
        >
          FAQ
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="mn mn--full mn--nv-s"
    role="main"
  >
    <div
      className={
        Object {
          "data-css-38wlrs": "",
        }
      }
    >
      <div
        className="p-a500 css-pym862"
      >
        <div
          className="sh sh--y"
        >
          <h1
            className="sh-title"
          >
            Cosmic Intervention
          </h1>
          <div
            className="sh-contact"
          >
            Case no: #17-000000001
          </div>
        </div>
        <div
          className="m-v300 t--info"
        >
          March 7, 2017, 12:59 PM
           
           — City Hall Plaza, Boston, MA 02131
        </div>
      </div>
      <div
        className="b b--g p-a500 m-v500"
      >
        <div
          className="txt-l"
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          Resolution — 
          April 8, 2017, 12:59 PM
        </div>
        <div
          className="t--intro"
        >
          Found Thanos. Smashed him into the floor with all of us standing around.
        </div>
      </div>
      <div
        className="p-a500"
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <div
          className="txt-l"
        >
          Description
        </div>
        <div
          className="t--intro"
        >
          I think that Thanos is here
        </div>
      </div>
      <div
        className="g p-a500"
        style={
          Object {
            "paddingTop": 0,
          }
        }
      >
        <div
          className="g--6"
        >
          <div
            className={
              Object {
                "data-css-13azwyo": "",
              }
            }
          >
            <img
              alt="Map of City Hall Plaza, Boston, MA 02131"
              className="css-70zt4q m-v300 br br-a150"
              src="https://api.mapbox.com/styles/v1/fake-style-path/static/-71.0576853,42.359927299999995,15/440x440@2x?attribution=false&logo=false&access_token=fake-access-token"
            />
            <div
              className="css-3nz9vn css-1pf8hut"
            />
          </div>
        </div>
        <div
          className="g--6"
        >
          <a
            href="https://pbs.twimg.com/media/C22X9ODXgAABGKS.jpg"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Submission"
              className="css-70zt4q m-v300 br br-a150"
              src="https://pbs.twimg.com/media/C22X9ODXgAABGKS.jpg"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
